# manipurl

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: mkdocs.yml
docs/docs/: index.md
manipurl/: __init__.py  dataset.py  features.py  plots.py  projection.py
manipurl/modeling/: predict.py  train.py
models/: common.py  sac.py
notebooks/: plotting.ipynb  test.ipynb
scripts/: docker_create_container.sh  docker_create_image.sh  docker_start_container.sh  eval_sac.sh  start_mlflow_server.sh
src/manipurl/: cli.py  test.py
src/manipurl/experiments/: eval.py  parallel.py  run_config.py  train_furl.py  train_sac.py
src/manipurl/models/: clip.py  common.py  sac.py
src/manipurl/shaping/: furl.py
src/manipurl/utils/: demo.py  embedding_buffer.py  env.py  logger.py  replay_buffer.py  tasks.py
src/manipurl/wrappers/: profiling.py
