[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "manipurl"
version = "0.0.1"
description = "Robotic manipulation."
authors = [
  { name = "Linus Lundgren" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.0"


[tool.ruff]
line-length = 99
src = ["manipurl"]
include = ["pyproject.toml", "manipurl/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["manipurl"]
force-sort-within-sections = true

